k8s/service-headless.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: svc-headless

spec:
  selector: # this is the label that we use to select the pods that we want to expose
    app: go-server-stateful
  ports:
    - port: 9000 # same port exposed at de application
  clusterIP: None # this is a Headless service


## At this point a port-forward is still required.
