k8s/service-mysql.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless

spec:
  selector: # this is the label that we use to select the pods that we want to expose
    app: mysql
  ports:
    - port: 3306 # same port exposed at de application
  clusterIP: None # this is a Headless service


## At this point a port-forward is still required.
